--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.0
 Django==4.2.7
+django-celery-beat==2.5.0
+django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
@@ -17,10 +20,12 @@ Pillow==10.1.0
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==5.0.1
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
