--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,9 @@ EMAIL_HOST_PASSWORD=
 
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
+
+TELEGRAM_CHAT_ID=
+TELEGRAM_BOT_API_KEY=
+
+CORS_ALLOW_ALL_ORIGINS=
+FRONTEND_URL=
