--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ click-repl==0.3.0
 cron-descriptor==1.4.0
 Django==4.2.7
 django-celery-beat==2.5.0
+django-cors-headers==4.3.1
 django-timezone-field==6.0.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
