--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+coverage==7.3.2
 cron-descriptor==1.4.0
 Django==4.2.7
 django-celery-beat==2.5.0
@@ -20,10 +21,12 @@ flake8==6.1.0
 humanize==4.8.0
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 kombu==5.3.3
 mccabe==0.7.0
 packaging==23.2
 Pillow==10.1.0
+pluggy==1.3.0
 prometheus-client==0.18.0
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
