--- a/.env.sample
+++ b/.env.sample
@@ -2,11 +2,8 @@ SECRET_KEY=
 
 DEBUG=
 
-DATABASE_ENGINE=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_PORT=
+POSTGRES_PASSWORD=
+DATABASE_HOST=
 
 TIME_ZONE=
 
