--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
   app:
     build: .
     tty: true
-    command: python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000
+    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
     ports:
       - '8000:8000'
     env_file:
@@ -49,7 +49,7 @@ services:
   celery_beat:
     build: .
     tty: true
-    command: celery -A config beat -l INFO -S django
+    command: celery -A config beat -l INFO
     env_file:
       - .env
     depends_on:
